--- a/styles/globals.css
+++ b/styles/globals.css
@@ -6,8 +6,18 @@ html,
 body {
   padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+  font-family:
+    -apple-system,
+    BlinkMacSystemFont,
+    Segoe UI,
+    Roboto,
+    Oxygen,
+    Ubuntu,
+    Cantarell,
+    Fira Sans,
+    Droid Sans,
+    Helvetica Neue,
+    sans-serif;
 }
 
 a {
@@ -18,8 +28,6 @@ a {
 * {
   box-sizing: border-box;
 }
-
-
 
 @layer base {
   :root {
@@ -76,8 +84,6 @@ a {
     --chart-5: 340 75% 55%;
   }
 }
-
-
 
 @layer base {
   * {
