--- a/styles/third-party.css
+++ b/styles/third-party.css
@@ -6,7 +6,7 @@
  *    without disabling user zoom.
  */
 
- html {
+html {
   font-family: sans-serif;
   /* 1 */
   -ms-text-size-adjust: 100%;
@@ -34,7 +34,19 @@ body {
    * Correct `block` display not defined for `main` in IE 11.
    */
 
-article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+article,
+aside,
+details,
+figcaption,
+figure,
+footer,
+header,
+hgroup,
+main,
+menu,
+nav,
+section,
+summary {
   display: block;
 }
 
@@ -43,7 +55,10 @@ article, aside, details, figcaption, figure, footer, header, hgroup, main, menu,
    * 2. Normalize vertical alignment of `progress` in Chrome, Firefox, and Opera.
    */
 
-audio, canvas, progress, video {
+audio,
+canvas,
+progress,
+video {
   display: inline-block;
   /* 1 */
   vertical-align: baseline;
@@ -65,7 +80,8 @@ audio:not([controls]) {
    * Hide the `template` element in IE 8/9/10/11, Safari, and Firefox < 22.
    */
 
-[hidden], template {
+[hidden],
+template {
   display: none;
 }
 
@@ -85,7 +101,8 @@ a {
    * active/hover state.
    */
 
-a:active, a:hover {
+a:active,
+a:hover {
   outline: 0;
 }
 
@@ -104,7 +121,8 @@ abbr[title] {
    * Address style set to `bolder` in Firefox 4+, Safari, and Chrome.
    */
 
-b, strong {
+b,
+strong {
   font-weight: bold;
 }
 
@@ -147,7 +165,8 @@ small {
    * Prevent `sub` and `sup` affecting `line-height` in all browsers.
    */
 
-sub, sup {
+sub,
+sup {
   font-size: 75%;
   line-height: 0;
   position: relative;
@@ -213,7 +232,10 @@ pre {
    * Address odd `em`-unit font size rendering in all browsers.
    */
 
-code, kbd, pre, samp {
+code,
+kbd,
+pre,
+samp {
   font-family: monospace;
   font-size: 1em;
 }
@@ -233,7 +255,11 @@ code, kbd, pre, samp {
    * 3. Address margins set differently in Firefox 4+, Safari, and Chrome.
    */
 
-button, input, optgroup, select, textarea {
+button,
+input,
+optgroup,
+select,
+textarea {
   color: inherit;
   /* 1 */
   font: inherit;
@@ -257,7 +283,8 @@ button {
    * Correct `select` style inheritance in Firefox.
    */
 
-button, select {
+button,
+select {
   text-transform: none;
 }
 
@@ -269,7 +296,10 @@ button, select {
    *    `input` and others.
    */
 
-button, html input[type="button"], input[type="reset"], input[type="submit"] {
+button,
+html input[type='button'],
+input[type='reset'],
+input[type='submit'] {
   -webkit-appearance: button;
   /* 2 */
   cursor: pointer;
@@ -280,7 +310,8 @@ button, html input[type="button"], input[type="reset"], input[type="submit"] {
    * Re-set default cursor for disabled elements.
    */
 
-button[disabled], html input[disabled] {
+button[disabled],
+html input[disabled] {
   cursor: default;
 }
 
@@ -288,7 +319,8 @@ button[disabled], html input[disabled] {
    * Remove inner padding and border in Firefox 4+.
    */
 
-button::-moz-focus-inner, input::-moz-focus-inner {
+button::-moz-focus-inner,
+input::-moz-focus-inner {
   border: 0;
   padding: 0;
 }
@@ -310,7 +342,8 @@ input {
    * 2. Remove excess padding in IE 8/9/10.
    */
 
-input[type="checkbox"], input[type="radio"] {
+input[type='checkbox'],
+input[type='radio'] {
   box-sizing: border-box;
   /* 1 */
   padding: 0;
@@ -323,7 +356,8 @@ input[type="checkbox"], input[type="radio"] {
    * decrement button to change from `default` to `text`.
    */
 
-input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-outer-spin-button {
+input[type='number']::-webkit-inner-spin-button,
+input[type='number']::-webkit-outer-spin-button {
   height: auto;
 }
 
@@ -332,7 +366,7 @@ input[type="number"]::-webkit-inner-spin-button, input[type="number"]::-webkit-o
    * 2. Address `box-sizing` set to `border-box` in Safari and Chrome.
    */
 
-input[type="search"] {
+input[type='search'] {
   -webkit-appearance: textfield;
   /* 1 */
   box-sizing: content-box;
@@ -345,7 +379,8 @@ input[type="search"] {
    * padding (and `textfield` appearance).
    */
 
-input[type="search"]::-webkit-search-cancel-button, input[type="search"]::-webkit-search-decoration {
+input[type='search']::-webkit-search-cancel-button,
+input[type='search']::-webkit-search-decoration {
   -webkit-appearance: none;
 }
 
@@ -400,12 +435,15 @@ table {
   border-spacing: 0;
 }
 
-td, th {
+td,
+th {
   padding: 0;
 }
 
 /* CSS Resets */
 
-*, *::before, *::after {
+*,
+*::before,
+*::after {
   box-sizing: inherit;
 }
